src/mesa/main/streaming-load-memcpy.c
@@ -26,6 +26,7 @@
  *
  */
 
+#ifdef __SSE4_1__
 #include "main/macros.h"
 #include "main/streaming-load-memcpy.h"
 #include <smmintrin.h>
@@ -83,3 +84,5 @@ _mesa_streaming_load_memcpy(void *restrict dst, void *restrict src, size_t len)
       memcpy(d, s, len);
    }
 }
+
+#endif
